--- a/public/css/style3.css
+++ b/public/css/style3.css
@@ -71,11 +71,11 @@
   outline: none;
   border-radius: 5px;
   border: 1px solid #000000;
-
+  margin-bottom: 10px;
   padding: 0.375rem 0.75rem;
 }
 .main button{
- 
+  margin-bottom: 10px;
 }
 .error-404 img{
  
