--- a/public/css/style4.css
+++ b/public/css/style4.css
@@ -66,7 +66,8 @@
   text-align: center;
 }
 .main textarea{
-  margin-right: 5px;
+  margin-right: 10px;
+  margin-left: 10px;
   border: none;
   outline: none;
   border-radius: 5px;
@@ -76,6 +77,8 @@
 }
 .main button{
   margin-bottom: 10px;
+  margin-right: 10px;
+  margin-left: 10px;
 }
 .error-404 img{
  
